objects/SGR_Opportunity_Member_Benefits__c.object
<CustomObject>
    <description>This object acts as a junction object between the Opportunity Group Section and Opportunity Census objects</description>
    <fields>
        <fullName>ACA_Fee__c</fullName>
        <label>ACA Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Total_Child_Rate__c</fullName>
        <label>Age Total Child Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Total_Employee_Rate__c</fullName>
        <label>Age Total Employee Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Total_Spouse_Rate__c</fullName>
        <label>Age Total Spouse Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <label>Benefit Agreement Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Total_Child_Rate__c</fullName>
        <label>Comp Total Child Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Total_Employee_Rate__c</fullName>
        <label>Comp Total Employee Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp_Total_Spouse_Rate__c</fullName>
        <label>Comp Total Spouse Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Composite_Rates__c</fullName>
        <label>Composite Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_ACA_Fees__c</fullName>
        <label>Current Age ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_Gross_Premium__c</fullName>
        <label>Current Age Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_Net_Of_ACA_Fees__c</fullName>
        <label>Current Age Net Of ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_Non_ACA_Fees__c</fullName>
        <label>Current Age Non ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_Total_Est_Tax_and_Fees__c</fullName>
        <label>Current Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Age_Total_Monthly_Premium__c</fullName>
        <label>Current Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Comp_ACA_Fees__c</fullName>
        <label>Current Comp ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Comp_Gross_Premium__c</fullName>
        <label>Current Comp Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <label>Current Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Comp_Total_Monthly_Premium__c</fullName>
        <label>Current Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Child__c</fullName>
        <formula>IF(Member_Policy_Tier__c==&apos;EC&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Family__c</fullName>
        <formula>IF(Member_Policy_Tier__c==&apos;EF&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Only__c</fullName>
        <formula>IF(Member_Policy_Tier__c==&apos;EO&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse__c</fullName>
        <formula>IF(Member_Policy_Tier__c==&apos;ES&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Spouse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Code__c</fullName>
        <label>Insurance Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <formula>TEXT(Opportunity_Plan_Rate__r.Plan__r.Line_Of_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Effective_Date__c</fullName>
        <label>Member Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Policy_Tier__c</fullName>
        <label>Member Policy Tier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Rate__c</fullName>
        <label>Member Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Rates__c</fullName>
        <label>Member Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Mem_Benefit_External_Id__c</fullName>
        <label>Opp Mem Benefit (External Id)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Census__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Census</label>
        <referenceTo>SGR_Opportunity_Census__c</referenceTo>
        <relationshipLabel>Opportunity Member Benefits</relationshipLabel>
        <relationshipName>Opportunity_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Group Section</label>
        <referenceTo>SGR_Opportunity_Group_Section__c</referenceTo>
        <relationshipLabel>Opportunity Member Benefits</relationshipLabel>
        <relationshipName>Opportunity_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Plan Rate</label>
        <referenceTo>SGR_Opportunity_Plan_Rate__c</referenceTo>
        <relationshipLabel>Opportunity Member Benefits</relationshipLabel>
        <relationshipName>Opportunity_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Member Benefits</relationshipLabel>
        <relationshipName>Opportunity_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt2_Age_Total_All_Rate__c</fullName>
        <label>Opt2 Age Total All Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Age_Total_Child_Rate__c</fullName>
        <label>Opt2 Age Total Child Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Age_Total_Employee_Rate__c</fullName>
        <label>Opt2 Age Total Employee Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Age_Total_Spouse_Rate__c</fullName>
        <label>Opt2 Age Total Spouse Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Comp_Total_All_Rate__c</fullName>
        <label>Opt2 Comp Total All Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Comp_Total_Child_Rate__c</fullName>
        <label>Opt2 Comp Total Child Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Comp_Total_Employee_Rate__c</fullName>
        <label>Opt2 Comp Total Employee Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Comp_Total_Spouse_Rate__c</fullName>
        <label>Opt2 Comp Total Spouse Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_ACA_Fees__c</fullName>
        <label>Opt2 Renw Age ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Gross_Premium__c</fullName>
        <label>Opt2 Renw Age Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Net_Of_ACA_Fees__c</fullName>
        <label>Opt2 Renw Age Net Of ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Non_ACA_Fees__c</fullName>
        <label>Opt2 Renw Age Non ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt2 Renw Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Age_Total_Monthly_Premium__c</fullName>
        <label>Opt2 Renw Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Comp_ACA_Fees__c</fullName>
        <label>Opt2 Renw Comp ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Comp_Gross_Premium__c</fullName>
        <label>Opt2 Renw Comp Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt2 Renw Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt2_Renw_Comp_Total_Monthly_Premium__c</fullName>
        <label>Opt2 Renw Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Age_Total_All_Rate__c</fullName>
        <label>Opt3 Age Total All Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Age_Total_Child_Rate__c</fullName>
        <label>Opt3 Age Total Child Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Age_Total_Employee_Rate__c</fullName>
        <label>Opt3 Age Total Employee Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Age_Total_Spouse_Rate__c</fullName>
        <label>Opt3 Age Total Spouse Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Comp_Total_All_Rate__c</fullName>
        <label>Opt3 Comp Total All Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Comp_Total_Child_Rate__c</fullName>
        <label>Opt3 Comp Total Child Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Comp_Total_Employee_Rate__c</fullName>
        <label>Opt3 Comp Total Employee Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Comp_Total_Spouse_Rate__c</fullName>
        <label>Opt3 Comp Total Spouse Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_ACA_Fees__c</fullName>
        <label>Opt3 Renw Age ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Gross_Premium__c</fullName>
        <label>Opt3 Renw Age Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Net_Of_ACA_Fees__c</fullName>
        <label>Opt3 Renw Age Net Of ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Non_ACA_Fees__c</fullName>
        <label>Opt3 Renw Age Non ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt3 Renw Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Age_Total_Monthly_Premium__c</fullName>
        <label>Opt3 Renw Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Comp_ACA_Fees__c</fullName>
        <label>Opt3 Renw Comp ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Comp_Gross_Premium__c</fullName>
        <label>Opt3 Renw Comp Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <label>Opt3 Renw Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt3_Renw_Comp_Total_Monthly_Premium__c</fullName>
        <label>Opt3 Renw Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <formula>Opportunity_Plan_Rate__r.Plan__r.Marketing_Plan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Code__c</fullName>
        <formula>TEXT(Opportunity_Census__r.Relationship_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renw_Age_ACA_Fees__c</fullName>
        <label>Renw Age ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Gross_Premium__c</fullName>
        <label>Renw Age Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Net_Of_ACA_Fees__c</fullName>
        <label>Renw Age Net Of ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Non_ACA_Fees__c</fullName>
        <label>Renw Age Non ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Total_Est_Tax_and_Fees__c</fullName>
        <label>Renw Age Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Age_Total_Monthly_Premium__c</fullName>
        <label>Renw Age Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Comp_ACA_Fees__c</fullName>
        <label>Renw Comp ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Comp_Gross_Premium__c</fullName>
        <label>Renw Comp Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Comp_Total_Est_Tax_and_Fees__c</fullName>
        <label>Renw Comp Total Est Tax and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renw_Comp_Total_Monthly_Premium__c</fullName>
        <label>Renw Comp Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharingRecordAccessUpdate__c</fullName>
        <label>SharingRecordAccessUpdate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <label>Subscriber Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX__c</fullName>
        <label>TAX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_Code__c</fullName>
        <label>Tier Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Member Benefits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Census__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Member Benefits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Member Benefits</pluralLabel>
    <recordTypes>
        <fullName>SGR_Opportunity_Membership_Benefits</fullName>
        <active>true</active>
        <description>SGR Opportunity Member Benefits RecordType</description>
        <label>SGR Opportunity Membership Benefits</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>